apps/expo-prezzo/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: careers-expo-ii-nz
# FIXME: Warning: would violate PodSecurity "restricted:latest": allowPrivilegeEscalation != false (container "careers-expo-ii-nz" must set securityContext.allowPrivilegeEscalation=false), unrestricted capabilities (container "careers-expo-ii-nz" must set securityContext.capabilities.drop=["ALL"]), runAsNonRoot != true (pod or container "careers-expo-ii-nz" must set securityContext.runAsNonRoot=true), seccompProfile (pod or container "careers-expo-ii-nz" must set securityContext.seccompProfile.t [...]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: careers-expo-ii-nz
  template:
    metadata:
      labels:
        app: careers-expo-ii-nz
        environment: production
    spec:
      automountServiceAccountToken: false
      containers:
      - name: careers-expo-ii-nz
        image: registry.gitlab.com/ii/expo-prezzo:2021.07.27.1632
        imagePullPolicy: IfNotPresent
        # securityContext:
        #   readOnlyRootFilesystem: true
        #   runAsUser: 1000
        #   runAsGroup: 1000
        #   allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8101
        readinessProbe:
          tcpSocket:
            port: 8101
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8101
          initialDelaySeconds: 2
          periodSeconds: 10
          failureThreshold: 10
        resources:
          requests:
            memory: "400Mi"
            cpu: "1"
          limits:
            memory: "400Mi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
spec:
  ports:
    - port: 8101
      targetPort: 8101
  selector:
    app: careers-expo-ii-nz
