apps/expo-prezzo/expo-ii-nz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careers-expo-ii-nz
  namespace: careers-expo-ii-nz
  labels:
    environment: production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "careers-expo.ii.nz"
  rules:
    - host: "careers-expo.ii.nz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: careers-expo-ii-nz
                port:
                  number: 8101
status:
  loadBalancer:
    ingress:
      # Let's use the same IP as everyone else
      - ip: 192.168.1.145
